--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset "utf-8";body { height: 10000px; } 
+@charset "utf-8";
 
 /* layout */
 .inner { width: 100%; max-width: 1400px; height: inherit; margin: auto; } 
@@ -53,18 +53,38 @@ nav#lnb .width1400 .m_tit { padding: 0 20px 0 0; }
 nav#lnb .width1400 .m_tit img { display: block; margin: 20px auto; width: 135px; } 
 nav#lnb .width100 { background: #fbfbfb; top: 90px; left: 0; z-index: 2; box-shadow: 0 2px 2px rgb(0, 0, 0 /7%); height: 0px; overflow: hidden; transition: all 0.5s; padding: 0 0; } 
 
-nav#lnb li:first-child .width100 { height: auto; padding: 70px 0 50px; } 
+/*
+nav#lnb li:first-child .width100 { height: auto; padding: 70px 0 50px; } */
 
 nav#lnb li:hover .width100 { height: auto; padding: 70px 0 50px; } 
 nav#lnb .width100::before { position: absolute; top: 0; content: ""; background-color: #deecff; border-radius: 0 0 120px 0; width: 100%; height: 100%; right: calc(50% + 24rem); z-index: -1; } 
 
 nav#lnb ul li ul.dep2 { padding: 0 60px; } 
 nav#lnb .dep1 ul.width1400>li { width: calc(100% / 3); margin: 0; padding-left: 20px; } 
- li.m_title p { color: #222; font-size: 14px; font-weight: bold; letter-spacing: -0.03em; } 
+ li.m_title p { color: #222; font-size: 14px; font-weight: 400; letter-spacing: -0.03em; margin: 10px 0 20px;} 
 
 nav#lnb li ul li a { text-align: left; } 
 nav#lnb li ul li h2 { font-size: 30px; font-weight: bold; letter-spacing: -2px; text-align: left; color: #00274e; } 
-nav#lnb li ul li ul li a { font-size: 1em; font-weight: bold; line-height: 180%; } 
+nav#lnb li ul li ul li a {  font-weight: bold; line-height: 180%; } 
 nav#lnb li ul li a { color:#666; font-size: 0.8em; font-weight: bold; line-height: 170%; padding-left: 10px; } 
-nav#lnb li ul li h3 a { color: #00274e; font-size: 17px; border: 1px solid #ccc; border-radius: 5px; font-weight: bold; line-height: 1; margin-bottom: 3px; padding: 17px 24px; display: block; margin: 0 0 15px; } 
+nav#lnb li ul li h3 a { color: #00274e; font-size: 17px; border: 1px solid #ccc; border-radius: 5px; font-weight: 300; line-height: 1; margin-bottom: 3px; padding: 17px 24px; display: block; margin: 0 0 15px; } 
+nav#lnb li ul li ul li a{font-weight: 300; color:#666; font-size: 1em;}
+nav#lnb li ul li ul li{position: relative;}
+nav#lnb li ul li ul li::after{position: absolute; width: 2px; height: 2px; display: block; background-color: #00274e; left: 20px; top: 50%; content: "";}
 
+/* section #main */
+section#main{position: relative; z-index: -1; }
+section#main::before{
+    content: "";
+    display: block;
+    background: #3779dc url('../images/mvisual_bg.png') no-repeat center bottom; 
+    background-size: 1920px;
+    width: 150vw; 
+    height: 990px; 
+    overflow: hidden; 
+    transform: translateX(-50%);
+    position: absolute;
+    left: 50%;
+    top: -124px;
+    border-radius: 50%;
+}
