--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,364 @@
 @charset "utf-8";
 
 /* layout */
-.inner { width: 100%; max-width: 1400px; height: inherit; margin: auto; } 
+.inner {
+  idwth: 100%;
+  max-width: 1400px;
+  height: inherit;
+  margin: auto;
+}
 
-.width1400 { margin: auto; max-width: 1400px; width: 100%; } 
-.pr { position: relative; } 
-.pa { position: absolute; } 
-.width100 { width: 100%; } 
+.width1400 {
+  margin: auto;
+  max-width: 1400px;
+  width: 100%;
+}
+.pr {
+  position: relative;
+}
+.pa {
+  position: absolute;
+}
+.width100 {
+  width: 100%;
+}
+
+.ir_pm {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999999999px;
+}
 
 /* skip_menu */
-a { outline: none; } 
-a:focus { outline: 1px dashed red; background: #000; color: #fff; } 
+a {
+  outline: none;
+}
+a:focus {
+  outline: 1px dashed red;
+  background: #000;
+  color: #fff;
+}
 
-.skip_menu { position: fixed; left: 0; top: 0; background-color: #000; color: #fff; padding: 10px 15px; text-decoration: none; transform: translateY(-100%); } 
-.skip_menu:focus { transform: translateY(0); } 
+.skip_menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #000;
+  color: #fff;
+  padding: 10px 15px;
+  text-decoration: none;
+  transform: translateY(-100%);
+}
+.skip_menu:focus {
+  transform: translateY(0);
+}
 
 /**************** header *****************/
-header { background-color: #3779dc; color: #fff; } 
-header .header_top { border-bottom: 1px solid rgba(255,255,255,.2); } 
-header .header_bot { border-bottom: 1px solid rgba(255,255,255,.2); position: relative; } 
+header {
+  background-color: #3779dc;
+  color: #fff;
+}
+header .header_top {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+header .header_bot {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  position: relative;
+}
 
-header .header_top ul { display: flex; justify-content: space-between; padding: 0 80px; } 
-header .header_top ul a { display: block; padding: 25px 15px 6px; color: #fff; position: relative; letter-spacing: -1px; } 
-header .header_top ul li:last-child a { padding: 25px 15px 6px 50px; } 
-header .header_top ul a span { position: absolute; bottom: 0; left: 0; display: inline-block; width: 55px; height: 34px; background: url("../images/character.png") no-repeat 13px bottom; } 
+header .header_top ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 80px;
+}
+header .header_top ul a {
+  display: block;
+  padding: 25px 15px 6px;
+  color: #fff;
+  position: relative;
+  letter-spacing: -1px;
+}
+header .header_top ul li:last-child a {
+  padding: 25px 15px 6px 50px;
+}
+header .header_top ul a span {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  width: 55px;
+  height: 34px;
+  background: url("../images/character.png") no-repeat 13px bottom;
+}
 
-header .header_top ul li:last-child a span:after { position: absolute; content: ""; background: url("../images/h.png") no-repeat; width: 16px; height: 17px; } 
-header .logo, header .sitemap { position: absolute; z-index: 999; } 
-header .logo { padding: 0 0 0 95px; line-height: 90px; } 
-header .logo h1 span { font-size: 0; width: 95px; display: inline-block; height: 36px; background-image: url('../images/logo.svg'); vertical-align:middle } 
-header .logo h1 a { color: #fff; font-size: 23px; font-weight: bold; letter-spacing: -0.07em; line-height: 1; } 
-header .sitemap { right: 0; top: 0; padding: 0 35px 0 0; line-height: 90px; } 
-header ul#nav { display: flex; justify-content: flex-end; padding: 0 70px; } 
-header ul#nav a { color: #fff; font-size: 18px; } 
-.dep2 ul { display: block; } 
-
+header .header_top ul li:last-child a span:after {
+  position: absolute;
+  content: "";
+  background: url("../images/h.png") no-repeat;
+  width: 16px;
+  height: 17px;
+}
+header .logo,
+header .sitemap {
+  position: absolute;
+  z-index: 999;
+}
+header .logo {
+  padding: 0 0 0 95px;
+  line-height: 90px;
+}
+header .logo h1 span {
+  font-size: 0;
+  width: 95px;
+  display: inline-block;
+  height: 36px;
+  background-image: url("../images/logo.svg");
+  vertical-align: middle;
+}
+header .logo h1 a {
+  color: #fff;
+  font-size: 23px;
+  font-weight: bold;
+  letter-spacing: -0.07em;
+  line-height: 1;
+}
+header .sitemap {
+  right: 0;
+  top: 0;
+  padding: 0 35px 0 0;
+  line-height: 90px;
+}
+header ul#nav {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 70px;
+}
+header ul#nav a {
+  color: #fff;
+  font-size: 18px;
+}
+.dep2 ul {
+  display: block;
+}
 
 /* 투뎁스 100% 배경 */
-#nav>li>.width100 { left: 0; } 
-#nav>li:hover .width100 { display: block; } 
+#nav > li > .width100 {
+  left: 0;
+}
+#nav > li:hover .width100 {
+  display: block;
+}
 
 /* custom */
-nav#lnb { height: 90px; background: #3779dc; } 
-nav#lnb li { padding: 0 25px; } 
-nav#lnb li a { display: block; line-height: 90px; text-align: center; font-size: 1.2em; font-weight: bold; position: relative; } 
+nav#lnb {
+  height: 90px;
+  background: #3779dc;
+}
+nav#lnb li {
+  padding: 0 25px;
+}
+nav#lnb li a {
+  display: block;
+  line-height: 90px;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  position: relative;
+}
 
-nav#lnb>ul>li a::after { content: ""; width: 8px; height: 8px; border-radius: 8px; background-color: #fff; position: absolute; display: block; top: 20px; left: 50%; margin: 0 0 0 -4px; opacity: 0; transition: .5s; } 
-nav#lnb>ul>li:hover>a::after { opacity: 1; } 
+nav#lnb > ul > li a::after {
+  content: "";
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background-color: #fff;
+  position: absolute;
+  display: block;
+  top: 20px;
+  left: 50%;
+  margin: 0 0 0 -4px;
+  opacity: 0;
+  transition: 0.5s;
+}
+nav#lnb > ul > li:hover > a::after {
+  opacity: 1;
+}
 
-nav#lnb li#freesamLogo { width: 181px; margin: 0 0 0 25px; } 
-nav#lnb .width1400 .m_tit { padding: 0 20px 0 0; } 
-nav#lnb .width1400 .m_tit img { display: block; margin: 20px auto; width: 135px; } 
-nav#lnb .width100 { background: #fbfbfb; top: 90px; left: 0; z-index: 2; box-shadow: 0 2px 2px rgb(0, 0, 0 /7%); height: 0px; overflow: hidden; transition: all 0.5s; padding: 0 0; } 
+nav#lnb li#freesamLogo {
+  width: 181px;
+  margin: 0 0 0 25px;
+}
+nav#lnb .width1400 .m_tit {
+  padding: 0 20px 0 0;
+}
+nav#lnb .width1400 .m_tit img {
+  display: block;
+  margin: 20px auto;
+  width: 135px;
+}
+nav#lnb .width100 {
+  background: #fbfbfb;
+  top: 90px;
+  left: 0;
+  z-index: 2;
+  box-shadow: 0 2px 2px rgb(0, 0, 0 /7%);
+  height: 0px;
+  overflow: hidden;
+  transition: all 0.5s;
+  padding: 0 0;
+}
 
 /*
 nav#lnb li:first-child .width100 { height: auto; padding: 70px 0 50px; } */
 
-nav#lnb li:hover .width100 { height: auto; padding: 70px 0 50px; } 
-nav#lnb .width100::before { position: absolute; top: 0; content: ""; background-color: #deecff; border-radius: 0 0 120px 0; width: 100%; height: 100%; right: calc(50% + 24rem); z-index: -1; } 
+nav#lnb li:hover .width100 {
+  height: auto;
+  padding: 70px 0 50px;
+}
+nav#lnb .width100::before {
+  position: absolute;
+  top: 0;
+  content: "";
+  background-color: #deecff;
+  border-radius: 0 0 120px 0;
+  width: 100%;
+  height: 100%;
+  right: calc(50% + 24rem);
+  z-index: -1;
+}
 
-nav#lnb ul li ul.dep2 { padding: 0 60px; } 
-nav#lnb .dep1 ul.width1400>li { width: calc(100% / 3); margin: 0; padding-left: 20px; } 
- li.m_title p { color: #222; font-size: 14px; font-weight: 400; letter-spacing: -0.03em; margin: 10px 0 20px;} 
+nav#lnb ul li ul.dep2 {
+  padding: 0 60px;
+}
+nav#lnb .dep1 ul.width1400 > li {
+  width: calc(100% / 3);
+  margin: 0;
+  padding-left: 20px;
+}
+li.m_title p {
+  color: #222;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: -0.03em;
+  margin: 10px 0 20px;
+}
 
-nav#lnb li ul li a { text-align: left; } 
-nav#lnb li ul li h2 { font-size: 30px; font-weight: bold; letter-spacing: -2px; text-align: left; color: #00274e; } 
-nav#lnb li ul li ul li a {  font-weight: bold; line-height: 180%; } 
-nav#lnb li ul li a { color:#666; font-size: 0.8em; font-weight: bold; line-height: 170%; padding-left: 10px; } 
-nav#lnb li ul li h3 a { color: #00274e; font-size: 17px; border: 1px solid #ccc; border-radius: 5px; font-weight: 300; line-height: 1; margin-bottom: 3px; padding: 17px 24px; display: block; margin: 0 0 15px; } 
-nav#lnb li ul li ul li a{font-weight: 300; color:#666; font-size: 1em;}
-nav#lnb li ul li ul li{position: relative;}
-nav#lnb li ul li ul li::after{position: absolute; width: 2px; height: 2px; display: block; background-color: #00274e; left: 20px; top: 50%; content: "";}
+nav#lnb li ul li a {
+  text-align: left;
+}
+nav#lnb li ul li h2 {
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: -2px;
+  text-align: left;
+  color: #00274e;
+}
+nav#lnb li ul li ul li a {
+  font-weight: bold;
+  line-height: 180%;
+}
+nav#lnb li ul li a {
+  color: #666;
+  font-size: 0.8em;
+  font-weight: bold;
+  line-height: 170%;
+  padding-left: 10px;
+}
+nav#lnb li ul li h3 a {
+  color: #00274e;
+  font-size: 17px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-weight: 300;
+  line-height: 1;
+  margin-bottom: 3px;
+  padding: 17px 24px;
+  display: block;
+  margin: 0 0 15px;
+}
+nav#lnb li ul li ul li a {
+  font-weight: 300;
+  color: #666;
+  font-size: 1em;
+}
+nav#lnb li ul li ul li {
+  position: relative;
+}
+nav#lnb li ul li ul li::after {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  display: block;
+  background-color: #00274e;
+  left: 20px;
+  top: 50%;
+  content: "";
+}
 
-/* section #main */
-section#main{position: relative; z-index: -1; }
-section#main::before{
-    content: "";
-    display: block;
-    background: #3779dc url('../images/mvisual_bg.png') no-repeat center bottom; 
-    background-size: 1920px;
-    width: 150vw; 
-    height: 990px; 
-    overflow: hidden; 
-    transform: translateX(-50%);
+/* main */
+section#main {
+  position: relative;
+}
+section#main::before {
+  content: "";
+  display: block;
+  background: #3779dc url("../images/mvisual_bg.png") no-repeat center bottom;
+  background-size: 1920px;
+  width: 150vw;
+  height: 990px;
+  overflow: hidden;
+  transform: translateX(-50%);
+  position: absolute;
+  left: 50%;
+  top: -124px;
+  border-radius: 50%;
+  z-index: -999;
+}
+section#main h4 {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  padding: 50px 0;
+}
+section#main h4 p{
+    font-size: 44px;
+    font-weight: 300;
+}
+section#main h4 .tit1:before {
     position: absolute;
-    left: 50%;
-    top: -124px;
-    border-radius: 50%;
+    left: 670px;
+  background-image: url(../images/mvisual_tit1.png);
+  content: "";
+  display: block;
+  width: 206px;
+  height: 71px;
+}
+section#main h4 .tit2:before {
+    position: absolute;
+    right: 630px;
+    top: 34px;
+  background-image: url(../images/mvisual_tit2.png);
+  content: "";
+  display: block;
+  width: 275px;
+  height: 144px;
+}
+
+section#main .slider img {
+  width: 100%;
+  padding: 0 99px;
+  border-radius: 0 0 270px 0;
+
+}
+
+.main_btn{
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    top: 461px;
+    z-index: -1;
 }
