--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,13 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 
+@font-face {
+  font-family: 'S_Core';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -38,4 +45,5 @@ body {
   font-family: "Nanum Brush Script", cursive;
   font-family: "Noto Sans KR", sans-serif;
   color: #555;
+  overflow-x: hidden;
 }
